--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "@tiptap/prosemirror-tables": "^1.1.4",
     "@tiptap/vue-2": "^2.0.0-beta.209",
     "core-js": "^3.8.3",
-    "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
+    "tiptap": "^1.32.2",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -63,7 +63,12 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.6.0",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
